tests/compError/noRet.ucl
// compError
// error: function did not return
// tests/compError/noRet.ucl:5 -> function defined here

test = fn(): String {}